--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -26,13 +26,15 @@ def get_count_tables(config, key):
 
 
 def get_assembler(config):
+    norm = "normalization_k%d_t%d" % (config["preprocessing"]["normalization"].get("k", 21),
+                                      config["preprocessing"]["normalization"].get("t", 100)))
     if config["assembly"]["assembler"] == "spades":
-        return "spades_{k}".format(k=config["assembly"].get("spades_k", "auto").replace(",", "_"))
+        return "spades_{k}_{norm}".format(k=config["assembly"].get("spades_k", "auto").replace(",", "_"), norm=norm)
     else:
         k_min = config["assembly"].get("kmer_min", 21)
         k_max = config["assembly"].get("kmer_max", 121)
         k_step = config["assembly"].get("kmer_step", 20)
-        return "megahit_{min}_{max}_{step}".format(min=k_min, max=k_max, step=k_step)
+        return "megahit_{min}_{max}_{step}_{norm}".format(min=k_min, max=k_max, step=k_step, norm=norm)
 
 
 def get_temp_dir(config):
@@ -122,76 +124,65 @@ elif config.get("workflow") == "coassemble":
     SHPFXS = config.get("prefix") + "1" if config.get("prefix") else ""
 
     TABLES = get_count_tables(config, "summary_counts")
-    NORMALIZATION = "normalization_k%d_t%d" % (config["preprocessing"]["normalization"].get("k", 21), config["preprocessing"]["normalization"].get("t", 100))
-    ASSEMBLER = get_assembler(config) + "_" + NORMALIZATION
     TMPDIR = get_temp_dir(config)
     COASSEMBLIES = coassemblies()
-
 
     SAMPLES = [i for i in config["samples"].keys() if not i == "coassemblies"]
 
     wildcard_constraints:
         sample = "\w+"
 
-
     rule all:
         input:
-            expand("{sample}/quality_control/decontamination/{sample}_{decon_dbs}.fastq.gz", sample=SAMPLES, decon_dbs=list(config["preprocessing"]["contamination"]["references"].keys())),
+            expand("{sample}/quality_control/decontamination/{sample}_{decon_dbs}.fastq.gz",
+                       sample=SAMPLES,
+                       decon_dbs=list(config["preprocessing"]["contamination"]["references"].keys())),
             expand("{sample}/quality_control/decontamination/{sample}_refstats.txt", sample=SAMPLES),
-            expand("{sample}/quality_control/%s/{sample}_pe.fastq.gz" % NORMALIZATION, sample=SAMPLES),
+            expand("{sample}/quality_control/{normalization}/{sample}_pe.fastq.gz",
+                       sample=SAMPLES,
+                       normalization="normalization_k%d_t%d" % (config["preprocessing"]["normalization"].get("k", 21),
+                                                                config["preprocessing"]["normalization"].get("t", 100))),
             expand("{sample}/quality_control/fastqc/{sample}_pe_fastqc.zip", sample=SAMPLES),
             expand("{sample}/quality_control/fastqc/{sample}_pe_fastqc.html", sample=SAMPLES),
-            expand("{sample}/%s/{sample}_contigs.fasta" % ASSEMBLER, sample=SAMPLES),
-            expand("{sample}/%s/annotation/orfs/{sample}.faa" % ASSEMBLER, sample=SAMPLES),
-            expand("{sample}/%s/stats/prefilter_contig_stats.txt" % ASSEMBLER, sample=SAMPLES),
-            expand("{sample}/%s/stats/final_contig_stats.txt" % ASSEMBLER, sample=SAMPLES),
-            expand("{sample}/%s/annotation/{reference}/{sample}_hits.tsv" % ASSEMBLER, reference=list(config["annotation"]["references"].keys()), sample=SAMPLES),
-            expand("{sample}/%s/annotation/{reference}/{sample}_assignments.tsv" % ASSEMBLER, reference=list(config["annotation"]["references"].keys()), sample=SAMPLES),
-            expand("{sample}/%s/annotation/{sample}_merged_assignments.tsv" % ASSEMBLER, sample=SAMPLES),
-            expand("{sample}/%s/count_tables/{sample}_{table}.tsv" % ASSEMBLER, sample=SAMPLES, table=TABLES),
+            expand("{sample}/{assembler}/{sample}_contigs.fasta", sample=SAMPLES, assembler=get_assembler(config)),
+            expand("{sample}/{assembler}/annotation/orfs/{sample}.faa", sample=SAMPLES, assembler=get_assembler(config)),
+            expand("{sample}/{assembler}/stats/prefilter_contig_stats.txt", sample=SAMPLES, assembler=get_assembler(config)),
+            expand("{sample}/{assembler}/stats/final_contig_stats.txt",
+                       sample=SAMPLES,
+                       assembler=get_assembler(config)),
+            expand("{sample}/{assembler}/annotation/{reference}/{sample}_hits.tsv",
+                       reference=list(config["annotation"]["references"].keys()),
+                       sample=SAMPLES,
+                       assembler=get_assembler(config)),
+            expand("{sample}/{assembler}/annotation/{reference}/{sample}_assignments.tsv", reference=list(config["annotation"]["references"].keys()), sample=SAMPLES, assembler=get_assembler(config)),
+            expand("{sample}/{assembler}/annotation/{sample}_merged_assignments.tsv", sample=SAMPLES, assembler=get_assembler(config)),
+            expand("{sample}/{assembler}/count_tables/{sample}_{table}.tsv", sample=SAMPLES, assembler=get_assembler(config), table=TABLES),
             expand("{sample}/{sample}_readme.html", sample=SAMPLES),
             expand("coassemblies/{coassembly}/all_decontamination_reads/{coassembly}_pe.fastq.gz", coassembly=COASSEMBLIES),
             expand("coassemblies/{coassembly}/all_normalized_reads/{coassembly}_pe.fastq.gz", coassembly=COASSEMBLIES),
-            expand("coassemblies/{coassembly}/quality_control/%s/{coassembly}_pe.fastq.gz" % NORMALIZATION, coassembly=COASSEMBLIES),
-            expand("coassemblies/{coassembly}/%s/stats/prefilter_contig_stats.txt" % ASSEMBLER, coassembly=COASSEMBLIES),
-            expand("coassemblies/{coassembly}/%s/stats/final_contig_stats.txt" % ASSEMBLER, coassembly=COASSEMBLIES),
-            expand("coassemblies/{coassembly}/%s/{coassembly}_contigs.fasta" % ASSEMBLER, coassembly=COASSEMBLIES),
+            expand("coassemblies/{coassembly}/quality_control/{normalization}/{coassembly}_pe.fastq.gz",
+                       coassembly=COASSEMBLIES, normalization="normalization_k%d_t%d" %
+                                                                  (config["preprocessing"]["normalization"].get("k", 21),
+                                                                   config["preprocessing"]["normalization"].get("t", 100))),
+            expand("coassemblies/{coassembly}/{assembler}/stats/prefilter_contig_stats.txt", coassembly=COASSEMBLIES, assembler=get_assembler(config)),
+            expand("coassemblies/{coassembly}/{assembler}/stats/final_contig_stats.txt", coassembly=COASSEMBLIES, assembler=get_assembler(config)),
+            expand("coassemblies/{coassembly}/{assembler}/{coassembly}_contigs.fasta", coassembly=COASSEMBLIES, assembler=get_assembler(config)),
+            coassembly_alignments(config, get_assembler(config)),
+            coassembly_count_tables(config, TABLES, get_assembler(config))
 
-            coassembly_alignments(config, ASSEMBLER),
-
-            # coassemblies/all-metat/quality_control/decontamination/all-metat_pe.fastq.gz
-            coassembly_count_tables(config, TABLES, ASSEMBLER)
-
-    include: "rules/quality_control/fastq_filter.snakefile"
-    include: "rules/quality_control/error_correction.snakefile"
-    include: "rules/quality_control/contig_filters.snakefile"
-    include: "rules/quality_control/decontamination.snakefile"
-    include: "rules/quality_control/normalization.snakefile"
-    include: "rules/quality_control/fastqc.snakefile"
-    if config["assembly"]["assembler"] == "spades":
-        include: "rules/assemblers/spades.snakefile"
-    else:
-        include: "rules/assemblers/megahit.snakefile"
-    include: "rules/annotation/diamond.snakefile"
-    include: "rules/annotation/prodigal.snakefile"
-    include: "rules/annotation/verse.snakefile"
-    include: "rules/annotation/munging.snakefile"
-    include: "rules/reports/sample.snakefile"
-    include: "rules/coassembly/coassemble.snakefile"
-
+    include: "rules/assemble.snakefile"
+    include: "rules/coassemble.snakefile"
 
 elif config.get("workflow") == "download":
 
-    FILES = ["silva_rfam_all_rRNAs.fa", "adapters.fa", "phiX174_virus.fa",
-             "refseq.db", "refseq.dmnd", "refseq.tree", "cazy.db", "cazy.dmnd",
-             "cog.db", "cog.dmnd", "eggnog.db", "eggnog.dmnd", "expazy.db",
-             "expazy.dmnd"]
-    OUTDIR = os.path.realpath(config["db_dir"])
+    FILES = ["silva_rfam_all_rRNAs.fa", "adapters.fa", "phiX174_virus.fa", "refseq.db",
+             "refseq.dmnd", "refseq.tree", "cazy.db", "cazy.dmnd", "cog.db", "cog.dmnd",
+             "eggnog.db", "eggnog.dmnd", "expazy.db", "expazy.dmnd"]
 
     rule all:
         input:
-            expand("{dir}/{filename}", dir=OUTDIR, filename=FILES)
-    include: "rules/initialization/download.snakefile"
+            expand("{dir}/{filename}", dir=os.path.realpath(config["db_dir"]), filename=FILES)
+    include: "rules/download.snakefile"
 
 else:
     print("Workflow %s is not a defined workflow." % config.get("workflow", "[no --workflow specified]"), file=sys.stderr)
